integrating Wijmo grid

--- a/D3 API/D3 API/Web.config
+++ b/D3 API/D3 API/Web.config
@@ -9,7 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="Transactional Store" value="user id=TeamProgress;password=TeamProgress;server=localhost;Initial Catalog=Ragnar;Trusted_Connection=yes;connection timeout=30" />
+    <!-- <add key="Transactional Store" value="user id=TeamProgress;password=TeamProgress;server=localhost;Initial Catalog=Ragnar;Trusted_Connection=yes;connection timeout=30" /> -->
+    <add key="Transactional Store" value="Server=regischarlot-ragnar.database.windows.net;Database=Ragnar;User Id=regischarlot-admin0698;Password=7$re^q2av$01;" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.1" />
