--- a/UX/package.json
+++ b/UX/package.json
@@ -23,14 +23,19 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@grapecity/wijmo.all": "^5.20191.603",
     "@rxjs/rx": "^4.1.0",
     "angular4-material-table": "^0.7.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
+    "popper": "^1.0.1",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "rxjs-observable": "0.0.7",
     "tslib": "^1.9.0",
+    "wijmo": "^5.20191.605",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
